objects/ssot__ForecastingQuota__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BusinessPeriodId__c</fullName>
        <label>Business Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CurrencyIsoCode__c</fullName>
        <label>Currency Iso Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingGroupItemId__c</fullName>
        <label>Forecasting Group Item</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ForecastingTypeId__c</fullName>
        <label>Forecasting Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Forecasting Quota Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductFamily__c</fullName>
        <label>Product Family</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuotaAmount__c</fullName>
        <label>DoNotUseQuotaAmount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuotaAmt__c</fullName>
        <label>Quota Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__QuotaOwner__c</fullName>
        <label>Quota Owner</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuotaQuantity__c</fullName>
        <label>Quota Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SalesTerritoryId__c</fullName>
        <label>Sales Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>